cd tutorial: update print statements

--- a/examples/userapi/05_conditions.ipynb
+++ b/examples/userapi/05_conditions.ipynb
@@ -43,20 +43,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Data([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "      [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "      [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "      [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "      [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "      [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "      [0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "      [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "      [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "      [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -65,7 +68,7 @@
     "\n",
     "f = Function(name='f', shape=shape, dimensions=(i,j))\n",
     "f.data[:,:] = np.eye(nx)\n",
-    "print(f.data[:,:]) # Print data"
+    "f.data[:,:] # Print data"
    ]
   },
   {
@@ -88,27 +91,30 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      " [1. 2. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      " [1. 1. 2. 1. 1. 1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 2. 1. 1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 2. 1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1. 2. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1. 1. 2. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1. 1. 1. 2. 1. 1.]\n",
-      " [1. 1. 1. 1. 1. 1. 1. 1. 2. 1.]\n",
-      " [1. 1. 1. 1. 1. 1. 1. 1. 1. 2.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Data([[2., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "      [1., 2., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "      [1., 1., 2., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "      [1., 1., 1., 2., 1., 1., 1., 1., 1., 1.],\n",
+       "      [1., 1., 1., 1., 2., 1., 1., 1., 1., 1.],\n",
+       "      [1., 1., 1., 1., 1., 2., 1., 1., 1., 1.],\n",
+       "      [1., 1., 1., 1., 1., 1., 2., 1., 1., 1.],\n",
+       "      [1., 1., 1., 1., 1., 1., 1., 2., 1., 1.],\n",
+       "      [1., 1., 1., 1., 1., 1., 1., 1., 2., 1.],\n",
+       "      [1., 1., 1., 1., 1., 1., 1., 1., 1., 2.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from devito import Eq, Operator\n",
     "op = Operator(Eq(f, f + 1))\n",
     "op.apply()\n",
-    "print(f.data[:,:])"
+    "f.data[:,:] # Print data"
    ]
   },
   {
@@ -299,7 +305,7 @@
     "op = Operator(Eq(f, f + 1, implicit_dims=ci))\n",
     "op.apply()\n",
     "print(op.ccode)\n",
-    "f.data\n"
+    "f.data[:, :]\n"
    ]
   },
   {
@@ -344,7 +350,7 @@
    "source": [
     "# Execute this cell 4-5 times so that values converge to 5\n",
     "op.apply()\n",
-    "f.data"
+    "f.data[:,:]"
    ]
   },
   {
@@ -439,7 +445,7 @@
     "\n",
     "op = Operator(Eq(h, g + 1, implicit_dims=ci))\n",
     "op.apply()\n",
-    "h.data\n",
+    "h.data[:,:]\n",
     "print(op.ccode)"
    ]
   },
