--- a/examples/userapi/05_conditional_dimension.ipynb
+++ b/examples/userapi/05_conditional_dimension.ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we look at the generated code, we will see that it is identical to the one from cell 3 -- no conditionals are generated. Why? We can notice that there are no conditionals in the generated code and as expected the function values are not updated. But why? We notice that `ci` is not used anywhere after construction. Neither `f` nor `op` know about `ci` yet. We then need to pass `ci` explicitly as an \"implicit `Dimension`\" to the equation that we want to be conditionally executed as shown in the next cell."
+    "If we look at the generated code, we will see that it is identical to that from cell 3 -- no conditionals are generated. Why? We can notice that there are no conditionals in the generated code and as expected the function values are not updated. But why? We notice that `ci` is not used anywhere after construction. Neither `f` nor `op` know about `ci` yet. We then need to pass `ci` explicitly as an \"implicit `Dimension`\" to the equation that we want to be conditionally executed as shown in the next cell."
    ]
   },
   {
@@ -618,14 +618,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that now `f` has been updated only for the first five rows with the `f+g` expression."
+    "You can see that now `f` has been updated only for the first five columns with the `f+g` expression."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A `ConditionalDimension` can be also used at the construction time of a `Function`. Let's use `ci` from the previous cell to explicitly construct function `h`. You will notice that now there is no need to pass argument `implicit_dims` as function's `h`s dimensions include the `ConditionalDimension` `ci`. `h` still has the size of the full domain, not the size of the domain that satisfies the condition."
+    "A `ConditionalDimension` can be also used at the construction time of a `Function`. Let's use `ci` from the previous cell to explicitly construct a function `h`. You will notice that in this case there is no need to pass argument `implicit_dims` to the `Equation` as the `ConditionalDimension` `ci` is now a dimension in `h`. `h` still has the size of the full domain, not the size of the domain that satisfies the condition."
    ]
   },
   {
@@ -874,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
